Renamed package and function to horizonplot.

--- a/example.ipynb
+++ b/example.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from HorizonPlot import horizon_plot"
+    "from horizonplot import horizonplot"
    ]
   },
   {
@@ -63,7 +63,7 @@
     "                   'start': list(range(1*n)) * pops, \n",
     "                   'pi': list(np.sin(np.linspace(-np.pi, 10*np.pi, 1*n))) * pops })\n",
     "\n",
-    "fig = horizon_plot(df, 'pi', width=1, col='chrom', row='pop', size=0.3, aspect=50)"
+    "fig = horizonplot(df, 'pi', width=1, col='chrom', row='pop', size=0.3, aspect=50)"
    ]
   },
   {
@@ -98,7 +98,7 @@
     "#                    'pi': np.add(list(np.sin(np.linspace(-np.pi, 10*np.pi, 1*n))) * pops, 5*np.random.random(n*pops))-2 })\n",
     "                   'pi': np.add(list(np.sin(np.linspace(-np.pi, 10*np.pi, 1*n))) * pops, np.random.normal(size=n*pops)) })\n",
     "\n",
-    "fig = horizon_plot(df, 'pi', width=1, col='chrom', row='pop', size=0.3, aspect=50)"
+    "fig = horizonplot(df, 'pi', width=1, col='chrom', row='pop', size=0.3, aspect=50)"
    ]
   }
  ],
